--- a/views/login.html
+++ b/views/login.html
@@ -7,11 +7,11 @@
   <body>
   	<div class="head">
         <div class="logo">
-          <img src="/images/yeah.png" alt="logo">
+          <a href="/"><img src="/images/yeah.png" alt="logo"></a>
         </div>
     </div>
    	<div class="form-wrapper">
-   		<form action="/register" method="post" placeholder="账号" name="username">
+   		<form action="/login" method="post" placeholder="账号" name="username">
 	   		<div class="wrapper">
 	   			<input autocomplete="false" disableautocomplete type="text" placeholder="账号" name="username">	
 	   		</div>
