--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,7 @@
 html,body{
 	width: 100%;
 	height: 100%;
+	min-width:  960px;
 }
 .head{
 	width: 100%;
@@ -17,26 +18,13 @@ html,body{
 	margin: 0 auto;
 	position: absolute;
 	left: 50%;
-	margin-left:-50px;
+	margin-left:-25px;
 }
 .logo img{
 	width: 50px;
 	height: 50px;
 }
-.login{
-	position: absolute;
-	left:80%;
-	width: 100px;
-	height: 50px;
-}
-.login a{
-	display: inline-block;
-	text-decoration: none;
-	line-height: 50px;
-	font-size: 16px;
-	color:#234;
-	margin-right:10px;
-}
+
 a:link{
 	color:#234;
 }
@@ -87,4 +75,68 @@ h1{
 .button-wrapper button:hover{
 	background-color: #55abed;
 	cursor: pointer;
+}
+
+/* index.html */
+.container{
+	width: 100%;
+	height: 30%;
+}
+.time{
+	position: relative;
+	margin:auto;
+	height: 100%;
+	width: 100%;
+}
+.time p{
+	position: absolute;
+	bottom:0;
+	left:20%;
+	right:20%;
+	min-height: 120px;
+	height: 120px;
+	line-height: 120px;
+	color:#234;
+	text-align: center;
+	font-size: 2.4em;
+	font-family: Microsoft Yahei;
+	border:3px solid #234;
+	border-radius: 6px;
+}
+.login,.logined{
+	position: absolute;
+	left:80%;
+	width: auto;
+	height: 40px;
+	top:10px;
+}
+
+.login a,.logined a{
+	font-family: Microsoft Yahei;
+	display: inline-block;
+	text-decoration: none;
+	height: 36px;
+	line-height: 36px;
+	font-size: 18px;
+	color:#234;
+	margin-right:10px;
+	border:2px solid #fff;
+	width: 3.2em;
+	text-align: center;
+	border-radius: 3px;
+	font-weight: bold;
+	transition: all .17s ease; 
+}
+.logined a{
+	width: auto;
+	padding-left: .5em;
+	padding-right: .5em;
+}
+.login a:hover,.logined a:hover{
+	border:2px solid #234;
+}
+
+.opeator{
+	margin:auto;
+	height: 50%;
 }
