--- a/views/store.html
+++ b/views/store.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="/css/normalize.css">
-  	<link rel="stylesheet" href="/css/main.css">
-  </head>
+  <%- include('./template/head.ejs') %>
   <body>
    	<div class="head">
         <div class="logo">
-          <img src="/images/yeah.png" alt="logo">
+          <a href="/"><img src="/images/yeah.png" alt="logo"></a>
         </div>
     </div>
   </body>
